--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + Vue</title>
+    <title>Booflix</title>
+    <!-- <link rel="icon" type="image/png" href=".src/assets/images/netflix.png"> -->
   </head>
   <body>
     <div id="app"></div>
